# tex-minify

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
tests/: test_processor.py
tex_minify/: __init__.py  processor.py
