[project]
name = "tex-minify"
version = "0.1.0"
description = "A CLI tool to expand \\input commands in TeX files"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click>=8.1.0",
]
requires-python = ">=3.11"

[project.scripts]
tex-minify = "tex_minify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
name = "tex-minify"
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"
pip = "*"
click = ">=8.1.0"
pytest = ">=7.0.0"

[tool.pixi.tasks]
install = "pip install -e ."
test = "pytest tests/"
